# minimal-transformer-llm

./: README.md  main.py  pyproject.toml
debug/: bpe_longest_token.py  bpe_tokenize_datasets.py  bpe_tokenizer_compression_ratio.py  bpe_tokenizer_debug.py  bpe_tokenizer_throughput.py  bpe_trainer_debug.py  bpe_trainer_multiprocess.py  bpe_trainer_multithreaded.py  bpe_trainer_optimized.py  multihead_self_attention_debug.py
minimal_transformer_llm/: bpe_pretokenizer.py  bpe_tokenizer.py  bpe_trainer.py  bpe_trainer_debug.py  bpe_trainer_debug_large_datasets.py  bpe_trainer_large_datasets.py  bpe_trainer_multiprocess.py  bpe_trainer_optimized.py  bpe_trainer_sequential.py  bpe_utilities.py  cross_entropy.py  embedding.py  linear.py  multihead_self_attention.py  rmsnorm.py  rope.py  scaled_dot_product_attention.py  softmax.py  swiglu.py  tranformer_lm.py  transformer_block.py
tests/: adapters.py
